# stellar-geology

./: .gitignore  .readthedocs.yaml  CAVEATS.md  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: Makefile  api.md  conf.py  contributing_examples.md  getting_started.md  index.md  requirements.txt
docs/_static/: custom.css
examples/: GALLERY_HEADER.rst  plot_planet_compositions.py  plot_star_to_mineralogy.py  plot_unit_conversions.py
scripts/: check_release.sh
src/: __init__.py  star.py
stellar_geology/: __init__.py  batchfile.py  constants.py  conversions.py  mineralogy.py  planet.py  star.py
stellar_geology/plot/: __init__.py  ternary_plot.py
tests/: test_batchfile.py  test_calculate_planet.py  test_conversions.py  test_docs_examples.py  test_get_composition.py  test_mineralogy.py  test_planet.py  test_star.py  test_ternary_plot.py
