[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stellar_geology"
version = "0.0.1"
description = "A python library for calculating planet geochemistry from stellar compositions."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
]

authors = [
    { name = "Kayla Iacovino", email = "kaylaiacovino@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
    "sphinx-gallery",
    "myst-parser",
    "matplotlib",
]

dev = [
    "mypy",
    "pytest",
    "pandas-stubs",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[project.urls]
Homepage = "https://github.com/kaylai/stellar-geology"
Repository = "https://github.com/kaylai/stellar-geology"
